Fixed sizing of cards and container. No more weird spaces and overflowing.

--- a/src/styles.css
+++ b/src/styles.css
@@ -49,6 +49,7 @@ h1 {
 .container {
   height: 70vh;
   width: 90vw;
+  max-width: 1540px;
 }
 
 .forms-container {
@@ -180,8 +181,7 @@ align-self: center;
   grid-row: 1 / span 2;
 
 
-  min-width: 200px;
-  max-width: 400px;
+  min-width: 320px;
   height: 40vh;
 
   border-radius: 16px;
@@ -221,7 +221,7 @@ align-self: center;
 .extended-forecast.card {
   grid-row: 2 / -1;
 
-  width: 100%;
+  min-width: 180px;
   height: 100%;
 
   border-radius: 10px;
